Changed navigation text

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <li>Movies</li>
       <li>Documentaries</li>
       <li>Short Films</li>
+      <li>Love Stories</li>
     </ul>
   </nav>
 </header>
